Update agents and skills with Java 25 integration
Updated all agent definitions and added two new skills for Java 25 adoption:

## Agent Updates

### AGENTS_REFERENCE.md
- Added Java 25 considerations section for all agents
- Updated each agent with Java 25-specific responsibilities
- Added build command: mvn -T 1.5C (parallel, -50% faster)
- Added language features: records, sealed classes, virtual threads, scoped values
- Added performance requirements: compact object headers, structured concurrency
- Added security requirements: TLS 1.3, 3072-bit RSA, AES-GCM, SBOM
- Added agent-specific Java 25 enhancements for each of 8 agents

### Agent-Specific Java 25 Tasks

1. **yawl-engineer**: Records for events, sealed classes for states, virtual threads
2. **yawl-validator**: Validate sealed hierarchies, immutable records, pattern matching
3. **yawl-architect**: Design with sealed interfaces, plan virtual thread adoption
4. **yawl-integrator**: Use records for APIs, virtual threads for async
5. **yawl-reviewer**: Check sealed classes, verify immutability, validate patterns
6. **yawl-tester**: Test data with records, virtual threads in fixtures
7. **yawl-production-validator**: Verify compact headers, GC tuning, SBOM, deprecated APIs
8. **yawl-performance-benchmarker**: Benchmark header savings, virtual thread performance

## Skills Updates

### manifest.json
Added two new production-ready skills:

1. **/yawl-java25** - Java 25 adoption and migration tools
   - `--check-deprecated` - Scan for deprecated APIs (removal timeline)
   - `--migrate-records` - Find DTO candidates for records
   - `--parallel-build` - Enable parallel Maven builds (-50% time)
   - `--performance-report` - Generate optimization analysis
   - `--security-check` - Java 25 security compliance
   - `--module-audit` - Java 9+ module system readiness

2. **/yawl-security** - Security validation and compliance checking
   - `--check` - Quick security validation (5-10 min)
   - `--sbom` - Generate Softwar